fix: blueman-applet -> blueman-tray in hyprland config.

--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -19,7 +19,7 @@ exec-once = hyprpaper
 exec-once = launch-waybar
 exec-once = playerctld
 exec-once = pasystray
-exec-once = blueman-applet
+exec-once = blueman-tray
 exec-once = nm-applet --indicator
 exec-once = udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
 exec-once = xset r rate 200 35 
