feat: show newline characters in helix.

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -41,7 +41,7 @@ enable = true
 
 # Do not render white spaces
 [editor.whitespace]
-render = "none"
+render.newline = "all"
 
 [editor.indent-guides]
 render = true
