fix: hyprland donation nag.

--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -133,6 +133,10 @@ gestures {
     workspace_swipe = false
 }
 
+ecosystem {
+    # no_donation_nag = true
+}
+
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 #device:epic-mouse-v1 {
