feat: wee thingies.

--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -40,6 +40,8 @@ env = XCURSOR_SIZE,24
 env = XDG_SESSION_TYPE,wayland
 env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland
+# Use X11 compatibility for Qt apps
+# env = QT_QPA_PLATFORM,xcb
 env = _JAVA_AWT_WM_NONREPARENTING,1
 
 # Remove stupid anime wallpaper
