--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -8,6 +8,9 @@ env = NVD_BACKEND,direct
 # Source base file
 source = ~/.dotfiles/hyprland/hyprland-common.conf
 
+# Uncomment to use X11 mode for Qt apps.
+# env = QT_QPA_PLATFORM,xcb
+
 # Disable GPU in qutebrowser
 unbind = $mod SHIFT, W
 bind = $mod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-rasterization
