feat: use thunderbird instead of thunderbird-beta in hyprland.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -12,7 +12,7 @@ $myterm = kitty
 # Browsers
   bind = $mod CONTROL, W, exec, firefox
   bind = $mod SHIFT, W, exec, qutebrowser --qt-flag enable-gpu-rasterization
-  bind = $mod SHIFT, T, exec, thunderbird-beta
+  bind = $mod SHIFT, T, exec, thunderbird
   bind = $mod SHIFT, P, pseudo, # dwindle
 
 # Lock
