--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -132,7 +132,8 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
 }
 
 ecosystem {
