--- a/waybar/config
+++ b/waybar/config
@@ -160,8 +160,8 @@
       "format-source": "{volume}% ",
       "format-source-muted": "",
       "format-icons": {
-        "headphone": "",
-        "headset": "🎧",
+        "headphone": " ",
+        "headset": " ",
         "phone": "",
         "portable": "",
         "car": "",
