feat: nemo to float.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -31,6 +31,7 @@ windowrulev2 = workspace 9 silent,class:(.*discord.*)
 windowrulev2 = workspace 9 silent,class:(.*Signal.*)
 
 # Positions
+windowrulev2 = float,class:(nemo)
 windowrulev2 = float,class:(Gaia Sky)
 windowrulev2 = float,title:(Gaia Sky)
 windowrulev2 = center,class:(Gaia Sky)
