--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -4,6 +4,11 @@ run  = 'plugin smart-enter'
 desc = "Enter the child directory, or open the file"
 
 [[manager.prepend_keymap]]
+on  = "M"
+run = "plugin mount"
+desc = "Mount manager"
+
+[[manager.prepend_keymap]]
 on   = [ "<C-s>" ]
 run  = 'shell "$SHELL" --block --confirm'
 desc = "Open shell here"
