fix: cursor disappearing in intellij, DKTF playlist.

--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -49,6 +49,10 @@ misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
 }
+# Cursor fix
+render {
+    allow_early_buffer_release = 0
+}
 
 # Do not scale xwayland windows
 xwayland {
