--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -19,6 +19,9 @@ bind = $mod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-r
 monitor=Unknown-1,disable
 
 cursor {
-  # no_hardware_cursors = true
+  no_hardware_cursors = false
   use_cpu_buffer = true
+}
+render {
+    allow_early_buffer_release = false
 }
