--- a/i3/config
+++ b/i3/config
@@ -185,7 +185,7 @@ bindsym --release $mod+Print exec import $HOME/Pictures/Screenshots/screenshot_$
 # Start Applications
 bindsym $mod+Control+w exec firefox
 bindsym $mod+Shift+w exec qutebrowser
-bindsym $mod+Shift+t exec thunderbird-beta
+bindsym $mod+Shift+t exec thunderbird
 bindsym $mod+Shift+f exec "$myterm --class=wm-floating,wm-floating lf `$HOME/.dotfiles/bin/xcwd`"
 bindsym $mod+Control+n exec "dunstctl action"
 
