--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -3,7 +3,8 @@
 ##################
 
 # Specify default video driver (see --vo=help for a list).
-vo=gpu,vaapi,x11,xv
+vo=gpu
+gpu-api=auto
 
 # Start in fullscreen mode by default.
 #fs=yes
