--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,6 +14,9 @@ listen_on               unix:/tmp/kitty
 enabled_layouts         all
 remember_window_size    no
 
+cursor_trail            1
+cursor_trail_decay      0.3 0.8
+
 include                 ~/.cache/wal/colors-kitty.conf
 background              #000000
 background_opacity      0.70
