fix: jj config.

--- a/jj/config.toml
+++ b/jj/config.toml
@@ -3,7 +3,7 @@ name = "langurmonkey"
 email = "me@tonisagrista.com"
 
 [signing]
-sign-all = true
+behavior = "own"
 backend = "gpg"
 key = "448C2B189756743013D5F7C22FD2A59C1D734C1F"
 
