feat: move Hyprland config to uwsm.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -10,24 +10,22 @@ $myterm = kitty
   bind = $mod, escape, exec, tschuss
 
 # Browsers
-  bind = $mod CONTROL, W, exec, firefox
-  bind = $mod SHIFT, W, exec, qutebrowser --qt-flag enable-gpu-rasterization
-  bind = $mod SHIFT, T, exec, thunderbird
-  bind = $mod SHIFT, P, pseudo, # dwindle
+  bind = $mod CONTROL, W, exec, uwsm app -- firefox
+  bind = $mod SHIFT, W, exec, uwsm app -- qutebrowser --qt-flag enable-gpu-rasterization
+  bind = $mod SHIFT, T, exec, uwsm app -- thunderbird
 
 # Lock
-  bind = $mod SHIFT, Z, exec, hyprlock
+  bind = $mod SHIFT, Z, exec, uwsm app -- hyprlock
 
 # Fuzzel
   # Launcher
-  bind = $mod, Z, exec, fuzzel
+  bind = $mod, Z, exec, uwsm app -- fuzzel
   # Translate
   bind = $mod, X, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-translate.sh
   # Calculator
   bind = $mod, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-calculator.sh
   bind = $mod, C, exec, speedcrunch
   # Pass
-  bind = $mod SHIFT, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
   bind = $mod, V, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
 
 # Window layout
@@ -134,5 +132,4 @@ $myterm = kitty
   bind = $mod, F8, exec, swayidle -w timeout 1 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on; pkill -nx swayidle'
 
 # Applications
-bind = $mod SHIFT, E, exec, neovide
-bind = $mod SHIFT, S, exec, ~/.dotfiles/bin/ambientsound
+bind = $mod SHIFT, E, exec, uwsm app -- neovide
