--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -13,21 +13,20 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = dunst
+exec-once = uwsm app -- dunst
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = hyprpaper
-exec-once = playerctld
-exec-once = pasystray
-exec-once = blueman-tray
-exec-once = nm-applet --indicator
-exec-once = udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
+exec-once = uwsm app -- hyprpaper
+exec-once = uwsm app -- playerctld
+exec-once = uwsm app -- blueman-tray
+exec-once = uwsm app -- nm-applet --indicator
+exec-once = uwsm app -- udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
 # Launch hypridle daemon, see ./hypridle.conf
-exec-once = hypridle
+exec-once = uwsm app -- hypridle
 # Gnome keyring
 exec-once = dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY
-exec-once = gnome-keyring-daemon --start --components=secrets
-exec-once = launch-waybar
-exec-once = mpDris2
+exec-once = uwsm app -- gnome-keyring-daemon --start --components=secrets
+exec-once = uwsm app -- waybar
+exec-once = uwsm app -- mpDris2
 
 # Some default env vars.
 env = HYPRCURSOR_THEME,McMojave
