--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -6,7 +6,7 @@ env = WLR_NO_HARDWARE_CURSORS,1
 env = NVD_BACKEND,direct
 
 # Source base file
-source = ~/.dotfiles/hyprland/hyprland-common.conf
+source = /home/tsagrista/.dotfiles/hyprland/hyprland-common.conf
 
 # Uncomment to use X11 mode for Qt apps.
 # env = QT_QPA_PLATFORM,xcb
