--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -10,7 +10,7 @@ general {
 # BACKGROUND IMAGE
 background {
   monitor =
-  path = /home/tsagrista/.dotfiles/assets/lock/lock-img.jpg
+  path = /home/tsagrista/.dotfiles/assets/lock/lock-img.png
   color = rgba(28, 20, 20, 1.0)
 
   blur_passes = 2
@@ -26,7 +26,7 @@ label {
   text_align = center
   color = rgba(200, 200, 200, 1.0)
   font_size = 125
-  font_family = JetBrains Mono Extrabold
+  font_family = Inter Bold
   rotate = 0 # degrees, counter-clockwise
 
   position = 0, 330
@@ -38,9 +38,9 @@ label {
   monitor =
   text = cmd[update:1000] echo "$(date +"%A, %B %d")"
   text_align = center
-  color = rgba(150, 150, 150, 1.0)
+  color = rgba(250, 150, 50, 1.0)
   font_size = 40
-  font_family = JetBrains Mono
+  font_family = Inter
   rotate = 0 # degrees, counter-clockwise
 
   position = 0, 190
@@ -53,9 +53,9 @@ label {
   monitor =
   text = $LAYOUT
   text_align = center
-  color = rgba(100, 100, 100, 1.0)
-  font_size = 20
-  font_family = JetBrains Mono
+  color = rgba(200, 200, 200, 1.0)
+  font_size = 17
+  font_family = Inter Bold
   rotate = 0 # degrees, counter-clockwise
 
   position = 0, 50
@@ -66,22 +66,22 @@ label {
 
 # INPUT FIELD
 input-field {
-    monitor =
+  monitor =
   size = 400, 60
-    outline_thickness = 2
-    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    outer_color = rgba(0, 0, 0, 0)
-    inner_color = rgba(0, 0, 0, 0.2)
-    font_color = rgb(150, 150, 150)
-    fade_on_empty = false
-    rounding = -1
-    check_color = rgb(204, 136, 34)
-    placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
-    hide_input = false
-    position = 0, -200
-    halign = center
-    valign = center
+  outline_thickness = 2
+  dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+  dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
+  dots_center = true
+  outer_color = rgba(140, 140, 140, 1)
+  inner_color = rgba(0, 0, 0, 0.5)
+  font_color = rgb(180, 180, 180)
+  fade_on_empty = false
+  rounding = -1
+  check_color = rgb(204, 136, 34)
+  placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
+  hide_input = false
+  position = 0, -200
+  halign = center
+  valign = center
 }
 
