feat: replace fuzzel with rofi-wayland.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -19,14 +19,14 @@ $myterm = kitty
 
 # Fuzzel
   # Launcher
-  bind = $mod, Z, exec, uwsm app -- fuzzel
-  # Translate
-  bind = $mod, X, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-translate.sh
+  bind = $mod, Z, exec, rofi -show drun
+  # Windows
+  bind = $mod, X, exec, rofi -show window
   # Calculator
-  bind = $mod, equal, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-calculator.sh
+  bind = $mod, equal, exec, rofi -show calc
   bind = $mod, C, exec, speedcrunch
-  # Pass
-  bind = $mod, V, exec, /bin/sh ~/.dotfiles/fuzzel/scripts/fuzzel-pass.sh
+  # Combi
+  bind = $mod, V, exec, rofi -show combi
 
 # Window layout
   bind = $mod, W, togglegroup
