feat: use rofi as power menu, fix rofi theme.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -7,7 +7,7 @@ $myterm = kitty
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
   bind = $mod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyprcwd) 
   bind = $mod, Q, killactive,
-  bind = $mod, escape, exec, tschuss
+  bind = $mod, escape, exec, rofi -show power-menu -modi power-menu:rofi-power-menu
 
 # Browsers
   bind = $mod CONTROL, W, exec, uwsm app -- firefox
@@ -17,7 +17,7 @@ $myterm = kitty
 # Lock
   bind = $mod SHIFT, Z, exec, uwsm app -- hyprlock
 
-# Fuzzel
+# Rofi
   # Launcher
   bind = $mod, Z, exec, rofi -show drun
   # Windows
@@ -25,8 +25,6 @@ $myterm = kitty
   # Calculator
   bind = $mod, equal, exec, rofi -show calc
   bind = $mod, C, exec, speedcrunch
-  # Combi
-  bind = $mod, V, exec, rofi -show combi
 
 # Window layout
   bind = $mod, W, togglegroup
