fix: tschuss theme.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -11,7 +11,7 @@ $myterm = kitty
 
 # Browsers
   bind = $mod CONTROL, W, exec, uwsm app -- firefox
-  bind = $mod SHIFT, W, exec, qutebrowser --qt-flag enable-gpu-rasterization
+  bind = $mod SHIFT, W, exec, uwsm app -- qutebrowser --qt-flag enable-gpu-rasterization
   bind = $mod SHIFT, T, exec, uwsm app -- thunderbird
 
 # Lock
