feat: add hyprpolkitagent.

--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -16,6 +16,7 @@ monitor=,preferred,auto,auto
 exec-once = uwsm app -- dunst
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = uwsm app -- hyprpaper
+exec-once = uwsm app -- hyprpolkitagent
 exec-once = uwsm app -- playerctld
 exec-once = uwsm app -- blueman-tray
 exec-once = uwsm app -- nm-applet --indicator
