feat: customize rofi power menu.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -7,7 +7,7 @@ $myterm = kitty
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
   bind = $mod, RETURN, exec, $myterm --working-directory $(~/.dotfiles/bin/hyprcwd) 
   bind = $mod, Q, killactive,
-  bind = $mod, escape, exec, rofi -show power-menu -modi power-menu:rofi-power-menu
+  bind = $mod, escape, exec, rofi -show power-menu -modi power-menu:~/.dotfiles/bin/rofi-power-menu
 
 # Browsers
   bind = $mod CONTROL, W, exec, uwsm app -- firefox
