--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -26,7 +26,7 @@ exec-once = uwsm app -- hypridle
 # Gnome keyring
 exec-once = dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY
 exec-once = uwsm app -- gnome-keyring-daemon --start --components=secrets
-exec-once = uwsm app -- waybar
+exec-once = uwsm app -- $HOME/.dotfiles/bin/launch-waybar
 exec-once = uwsm app -- mpDris2
 
 # Some default env vars.
