feat: gimp export dialog to floating.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -51,6 +51,7 @@ windowrulev2 = float,class:(thunderbird),title:(About Mozilla Thunderbird)
 windowrulev2 = float,class:(thunderbird),title:(Write: .*)
 windowrulev2 = float,class:(.*Terraria.*)
 windowrulev2 = float,class:(.*zenity.*)
+windowrulev2 = float,title:(Export Image as.*)
 
 # Flameshot
 windowrulev2=fullscreenstate 0 2,class:^(flameshot)$
