fix: adjust blur settings in hyprland to prevent high CPU usage.

--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -102,17 +102,17 @@ decoration {
 
     blur {
         enabled = yes
-        size = 2
-        passes = 2
-        new_optimizations = yes
-        ignore_opacity = on
-        xray = false
+        size = 8
+        passes = 1
+    }
+    shadow {
+        enabled = yes
     }
 }
 
 # Animations. Source either animations-fancy or animations-base
-source = ~/.config/hypr/animations-fancy.conf
-#source = ~/.config/hypr/animations-base.conf
+#source = ~/.config/hypr/animations-fancy.conf
+source = ~/.config/hypr/animations-base.conf
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
