--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -85,3 +85,32 @@ input-field {
   valign = center
 }
 
+# CPU Usage
+label {
+    monitor =
+    text = cmd[update:2000] echo "CPU: $(top -bn1 | grep "Cpu(s)" | sed "s/.*, *\([0-9.]*\)%* id.*/\1/" | awk '{print 100 - $1}' | cut -d. -f1)%"
+    color = $peach
+    font_size = 12
+    font_family = $font
+    position = -30, -35
+    halign = right
+    valign = top
+    shadow_passes = 1
+    shadow_size = 2
+    shadow_color = rgba(250, 179, 135, 0.3)
+}
+# RAM Usage
+label {
+    monitor =
+    text = cmd[update:3000] free | grep Mem | awk '{printf "RAM: %.0f%%", $3/$2 * 100.0}'
+    color = $yellow
+    font_size = 12
+    font_family = $font
+    position = -30, -55
+    halign = right
+    valign = top
+    shadow_passes = 1
+    shadow_size = 2
+    shadow_color = rgba(250, 227, 176, 0.3)
+}
+
