fix: qutebrowser to default to X11 (xcb), otherwise WebGL is not available.

--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -13,7 +13,7 @@ source = /home/tsagrista/.dotfiles/hyprland/hyprland-common.conf
 
 # Disable GPU in qutebrowser
 unbind = $mod SHIFT, W
-bind = $mod SHIFT, W, exec, QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-rasterization
+bind = $mod SHIFT, W, exec, QT_QPA_PLATFORM=xcb QT_SCALE_FACTOR=2 qutebrowser --qt-flag enable-gpu-rasterization
 
 # Disable glitched monitor in NVIDIA
 monitor=Unknown-1,disable
