--- a/hyprland/hyprland-bonobo.conf
+++ b/hyprland/hyprland-bonobo.conf
@@ -10,6 +10,8 @@ env = QT_ENABLE_HIDPI_SCALING=1
 # Source nvidia file
 source = ~/.dotfiles/hyprland/hyprland-nvidia.conf
 
+bind = $mod SHIFT, W, exec, QT_QPA_PLATFORM=xcb QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-rasterization
+
 # Overwrite stuff
 env = HYPRCURSOR_SIZE,20
 env = XCURSOR_SIZE,20
