fix: scale factor for qb in bonobo, again.

--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -11,7 +11,7 @@ source = /home/tsagrista/.dotfiles/hyprland/hyprland-common.conf
 # Uncomment to use X11 mode for Qt apps.
 # env = QT_QPA_PLATFORM,xcb
 
-# Disable GPU in qutebrowser
+# Use X11 with qutebrowser
 unbind = $mod SHIFT, W
 bind = $mod SHIFT, W, exec, QT_QPA_PLATFORM=xcb QT_SCALE_FACTOR=2 qutebrowser --qt-flag enable-gpu-rasterization
 
