none: use mpstat to get cpu load for hyprlock.

--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -88,7 +88,7 @@ input-field {
 # CPU Usage
 label {
     monitor =
-    text = cmd[update:2000] echo "CPU: $(top -bn1 | grep "Cpu(s)" | sed "s/.*, *\([0-9.]*\)%* id.*/\1/" | awk '{print 100 - $1}' | cut -d. -f1)%"
+    text = cmd[update:2000] echo "CPU: $(mpstat 1 1 | awk '/Average:/ {print 100 - $NF}')%"
     color = $peach
     font_size = 12
     font_family = $font
