feat: Replace dunst with fnott.

--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -12,6 +12,7 @@ monitor=,preferred,auto,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
+exec-once = uwsm app -- fnott
 # Execute your favorite apps at launch
 exec-once = uwsm app -- hyprpaper
 exec-once = uwsm app -- playerctld
