feat: Fix fnott.

--- a/fnott/fnott.ini
+++ b/fnott/fnott.ini
@@ -23,13 +23,13 @@
 
  border-color=909090ff
  border-radius=12
- border-size=2
+ border-size=1
  padding-vertical=15
  padding-horizontal=30
  dpi-aware=yes
  title-font=sans serif
- title-color=ffffffff
- title-format=
+ title-color=ffffff77
+ title-format=<i>%a%A</i>
  summary-font=sans serif
  summary-color=ffffffff
  summary-format=<b>%s</b>\n
@@ -48,7 +48,7 @@
  summary-color=888888ff
  body-color=888888ff
  [normal]
- background=000011bb
+ background=000011dd
 
  [critical]
  background=6c2211ff
