fix: Fnott font config.

--- a/fnott/fnott.ini
+++ b/fnott/fnott.ini
@@ -15,7 +15,7 @@
  max-icon-size=32
  selection-helper=dmenu
  selection-helper-uses-null-separator=no
- play-sound=aplay ${filename}
+ scaling-filter=cubic
 
 # Default values, may be overridden in 'urgency' specific sections
 # layer=top
@@ -27,15 +27,15 @@
  padding-vertical=15
  padding-horizontal=30
  dpi-aware=yes
- title-font=sans serif
+ title-font=Inter:size=11
  title-color=ffffff77
  title-format=<i>%a%A</i>
- summary-font=sans serif
+ summary-font=Inter Black:size=13
  summary-color=ffffffff
- summary-format=<b>%s</b>\n
- body-font=sans serif
+ summary-format=%s
+ body-font=Inter:size=11
  body-color=ffffff99
- body-format=%b
+ body-format=\n%b
  sound-file=
  icon=
 # Timeout values are in seconds. 0 to disable
