fix: Colors for different notification levels.

--- a/fnott/fnott.ini
+++ b/fnott/fnott.ini
@@ -23,12 +23,12 @@
 
  border-color=909090ff
  border-radius=12
- border-size=1
+ border-size=2
  padding-vertical=15
  padding-horizontal=30
- dpi-aware=yes
+ dpi-aware=no
  title-font=Inter:size=11
- title-color=ffffff77
+ title-color=ffffff99
  title-format=<i>%a%A</i>
  summary-font=Inter Black:size=13
  summary-color=ffffffff
@@ -43,12 +43,12 @@
  default-timeout=0
  idle-timeout=0
  [low]
- background=112299ff
- title-color=888888ff
- summary-color=888888ff
- body-color=888888ff
+ background=132313dd
+ summary-color=54ff64ff
+ title-color=33aa3399
  [normal]
- background=000011dd
-
+ background=131313dd
  [critical]
- background=6c2211ff
+ background=131313dd
+ summary-color=ff1010ff
+ title-color=aa333399
