feat: Replace flameshot and grim with hyprshot.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -101,8 +101,9 @@ $myterm = kitty
   binde = $mod CONTROL, j, resizeactive, 0 30
 
 # Screenshots
-  bind = , Print, exec, grim -t jpeg "$HOME/Pictures/Screenshots/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"; notify-send "Screenshot saved to $HOME/Pictures/Screenshots/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
-  bind = $mod, Print, exec, grimshot save area "$(yad --file --directory)/Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg";  notify-send "Screenshot saved in chosen location as Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg"
+  bind = , Print, exec, hyprshot -o "$HOME/Pictures/Screenshots" -f "Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg" -m output
+  bind = $mod, Print, exec, hyprshot -o "$HOME/Pictures/Screenshots" -f "Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg" -m region
+  bind = $mod CONTROL, Print, exec, hyprshot -o "$HOME/Pictures/Screenshots" -f "Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg" -m window
 
 
 
