feat: Add hyprpicker binding in  , P.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -105,7 +105,8 @@ $myterm = kitty
   bind = $mod, Print, exec, hyprshot -o "$HOME/Pictures/Screenshots" -f "Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg" -m region
   bind = $mod CONTROL, Print, exec, hyprshot -o "$HOME/Pictures/Screenshots" -f "Screenshot_$(date -u +%Y-%m-%dT%H:%M:%S).jpg" -m window
 
-
+# Color picker
+  bind = $mod $mod2, P, exec, hyprpicker -a
 
 # Media player
   bind = , XF86AudioPrev, exec, playerctl previous
