fix: Float/pin picture-in-picture windows.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -53,17 +53,8 @@ windowrulev2 = float,class:(.*Terraria.*)
 windowrulev2 = float,class:(.*zenity.*)
 windowrulev2 = float,title:(Export Image as.*)
 
-# Flameshot
-windowrulev2=fullscreenstate 0 2,class:^(flameshot)$
-windowrulev2=noanim,class:^(flameshot)$
-windowrulev2=float,class:^(flameshot)$
-windowrulev2=monitor 0,class:^(flameshot)$
-windowrulev2=move 0 -195,class:^(flameshot)$
-windowrulev2=noborder,class:flameshot
-windowrulev2=rounding 0,class:flameshot
-
 # Picture-in-picture windows
-windowrulev2 = float, title:^(Picture-in-picture|Picture-in-Picture)$
-windowrulev2 = pin, title:^(Picture-in-picture|Picture-in-Picture)$
-windowrulev2 = move 67% 72%, title:^(Picture-in-picture|Picture-in-Picture)$
-windowrulev2 = size 33% 28%, title:^(Picture-in-picture|Picture-in-Picture)$
+windowrulev2 = float,title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
+windowrulev2 = pin,title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
+windowrulev2 = move 67% 72%, title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
+windowrulev2 = size 33% 28%, title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
