--- a/hyprland/hyprland-common.conf
+++ b/hyprland/hyprland-common.conf
@@ -54,7 +54,7 @@ xwayland {
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us,es
-    kb_variant = intl
+    kb_variant = altgr-intl
     kb_model = pc104
     kb_options = grp:alt_space_toggle,caps:swapescape,eurosign:5
     kb_rules =
