feat: Add timeout to fnott notifications, add binding to rofi-emoji, update RSS feed.

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -25,6 +25,8 @@ $myterm = kitty
   # Calculator
   bind = $mod, equal, exec, rofi -show calc
   bind = $mod, C, exec, speedcrunch
+  # Rofimoji
+  bind = $mod, E, exec, rofimoji
 
 # Window layout
   bind = $mod, W, togglegroup
