fix: Globbing in hyprland conf.

--- a/hyprland/hyprland-makemake.conf
+++ b/hyprland/hyprland-makemake.conf
@@ -7,7 +7,7 @@ env = QT_SCALE_FACTOR,1
 env = QT_ENABLE_HIDPI_SCALING=1
 
 # Source nvidia file
-source = /home/tsagrista/.dotfiles/hyprland/hyprland-nvidia.conf
+source = ~/.dotfiles/hyprland/hyprland-nvidia.conf
 
 # Overwrite stuff
 env = HYPRCURSOR_SIZE,20
