fix: Opacity of kitty and steam window rules.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -31,7 +31,7 @@ windowrulev2 = workspace 9 silent,class:(.*telegram-desktop.*)
 windowrulev2 = workspace 9 silent,class:(.*discord.*)
 windowrulev2 = workspace 9 silent,class:(.*Signal.*)
 
-# Positions
+# Positions, floats
 windowrulev2 = float,class:(nemo)
 windowrulev2 = float,class:(Gaia Sky)
 windowrulev2 = float,title:(Gaia Sky)
@@ -52,6 +52,7 @@ windowrulev2 = float,class:(thunderbird),title:(Write: .*)
 windowrulev2 = float,class:(.*Terraria.*)
 windowrulev2 = float,class:(.*zenity.*)
 windowrulev2 = float,title:(Export Image as.*)
+windowrulev2 = float,class:(steam_app_.*)
 
 # Picture-in-picture windows
 windowrulev2 = float,title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
