feat: Some changes in window rules and kitty opacity.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -33,10 +33,7 @@ windowrulev2 = workspace 9 silent,class:(.*Signal.*)
 
 # Positions, floats
 windowrulev2 = float,class:(nemo)
-windowrulev2 = float,class:(Gaia Sky)
-windowrulev2 = float,title:(Gaia Sky)
-windowrulev2 = center,class:(Gaia Sky)
-windowrulev2 = bordercolor rgb(33BC44),class:(Gaia Sky)
+windowrulev2 = float, center, class: (Gaia Sky), title: (Gaia Sky)
 windowrulev2 = float,class:(blueman-manager)
 windowrulev2 = center,class:(blueman-manager)
 windowrulev2 = float,class:(nm-connection-editor)
@@ -52,7 +49,6 @@ windowrulev2 = float,class:(thunderbird),title:(Write: .*)
 windowrulev2 = float,class:(.*Terraria.*)
 windowrulev2 = float,class:(.*zenity.*)
 windowrulev2 = float,title:(Export Image as.*)
-windowrulev2 = float,class:(steam_app_.*)
 
 # Picture-in-picture windows
 windowrulev2 = float,title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
