--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -33,7 +33,7 @@ windowrulev2 = workspace 9 silent,class:(.*Signal.*)
 
 # Positions, floats
 windowrulev2 = float,class:(nemo)
-windowrulev2 = float, center, class: (Gaia Sky), title: (Gaia Sky)
+windowrulev2 = float,class:(Gaia Sky),title:(Gaia Sky)
 windowrulev2 = float,class:(blueman-manager)
 windowrulev2 = center,class:(blueman-manager)
 windowrulev2 = float,class:(nm-connection-editor)
