fix: IntelliJ idea hyprland issues.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -55,3 +55,6 @@ windowrulev2 = float,title:^(Picture in picture|Picture-in-picture|Picture-in-Pi
 windowrulev2 = pin,title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
 windowrulev2 = move 67% 72%, title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
 windowrulev2 = size 33% 28%, title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
+
+# Special
+windowrulev2 = noinitialfocus, class:(jetbrains-)(.*), floating:1
