feat: Add battery level to hyprlock.

--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -85,6 +85,20 @@ input-field {
   valign = center
 }
 
+# Battery
+label {
+    monitor =
+    text = cmd[update:2000] echo "BAT: $( [ -f /sys/class/power_supply/BAT0/capacity ] && cat /sys/class/power_supply/BAT0/capacity || echo 'N/A' )%"
+    color = $peach
+    font_size = 12
+    font_family = $font
+    position = -30, -35
+    halign = right
+    valign = top
+    shadow_passes = 1
+    shadow_size = 2
+    shadow_color = rgba(250, 179, 135, 0.3)
+}
 # CPU Usage
 label {
     monitor =
@@ -92,7 +106,7 @@ label {
     color = $peach
     font_size = 12
     font_family = $font
-    position = -30, -35
+    position = -30, -55
     halign = right
     valign = top
     shadow_passes = 1
@@ -106,7 +120,7 @@ label {
     color = $yellow
     font_size = 12
     font_family = $font
-    position = -30, -55
+    position = -30, -75
     halign = right
     valign = top
     shadow_passes = 1
