fix: Idea window rules to use new non-CE class.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -19,7 +19,7 @@ windowrulev2 = workspace 2 silent,class:(.*Thorium-browser.*)
 windowrulev2 = workspace 3 silent,class:(.*Thunderbird.*)
 windowrulev2 = workspace 3 silent,class:(.*thunderbird.*)
 windowrulev2 = workspace 3 silent,class:(.*Mail.*)
-windowrulev2 = workspace 4 silent,class:(.*jetbrains-idea-ce.*)
+windowrulev2 = workspace 4 silent,class:(.*jetbrains-idea.*)
 windowrulev2 = workspace 5 silent,class:(.*steam.*)
 windowrulev2 = workspace 5 silent,class:(.*steamwebhelper.*)
 windowrulev2 = workspace 5 silent,class:(.*Terraria.*)
