feat: Godot to ws 8.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -26,6 +26,7 @@ windowrulev2 = workspace 5 silent,class:(.*Terraria.*)
 windowrulev2 = workspace 6 silent,class:(.*FreeTube.*)
 windowrulev2 = workspace 7 silent,class:(.*resolve.*)
 windowrulev2 = workspace 7 silent,class:(.*anythingllm-desktop.*)
+windowrulev2 = workspace 8 silent,class:(.*Godot.*)
 windowrulev2 = workspace 9 silent,class:(.*zoom.*)
 windowrulev2 = workspace 9 silent,class:(.*telegram-desktop.*)
 windowrulev2 = workspace 9 silent,class:(.*discord.*)
