--- a/hyprland/hyprland-nvidia.conf
+++ b/hyprland/hyprland-nvidia.conf
@@ -12,8 +12,8 @@ source = /home/tsagrista/.dotfiles/hyprland/hyprland-common.conf
 # env = QT_QPA_PLATFORM,xcb
 
 # Use X11 with qutebrowser
-unbind = $mod SHIFT, W
-bind = $mod SHIFT, W, exec, QT_QPA_PLATFORM=xcb QT_SCALE_FACTOR=2 qutebrowser --qt-flag enable-gpu-rasterization
+#unbind = $mod SHIFT, W
+#bind = $mod SHIFT, W, exec, QT_QPA_PLATFORM=xcb QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-rasterization
 
 # Disable glitched monitor in NVIDIA
 monitor=Unknown-1,disable
