none: Remove qtbrowser from bonobo.

--- a/hyprland/hyprland-bonobo.conf
+++ b/hyprland/hyprland-bonobo.conf
@@ -11,8 +11,8 @@ env = QT_ENABLE_HIDPI_SCALING=1
 source = ~/.dotfiles/hyprland/hyprland-nvidia.conf
 
 # Use X11 with qutebrowser, scale of 1
-unbind = $mod SHIFT, W
-bind = $mod SHIFT, W, exec, QT_QPA_PLATFORM=xcb QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-rasterization
+#unbind = $mod SHIFT, W
+#bind = $mod SHIFT, W, exec, QT_QPA_PLATFORM=xcb QT_SCALE_FACTOR=1 qutebrowser --qt-flag enable-gpu-rasterization
 
 # Overwrite stuff
 env = HYPRCURSOR_SIZE,20
