fix: Update hyprpaper config.

--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,3 +1,6 @@
 preload = ~/Pictures/current-wallpaper
-wallpaper = ,~/Pictures/current-wallpaper
+wallpaper {
+	monitor =
+	path = ~/Pictures/current-wallpaper
+}
 splash = false
