--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -1,6 +1,6 @@
 [[mgr.prepend_keymap]]
-on   = [ "l" ]
-run  = 'plugin smart-enter'
+on ="l"
+run = "plugin smart-enter"
 desc = "Enter the child directory, or open the file"
 
 [[mgr.prepend_keymap]]
