fix: Update window rules in hyprland to new format.

--- a/hyprland/windowrules.conf
+++ b/hyprland/windowrules.conf
@@ -1,61 +1,43 @@
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
 # Global classes
-windowrulev2 = float,class:(wm-floating)
-windowrulev2 = center,class:(wm-floating)
+windowrule = float on, match:class wm-floating
+windowrule = center on , match:class wm-floating
 
-windowrulev2 = float,class:(wm-floating-big)
-windowrulev2 = size 1680 920,class:(wm-floating-big)
-windowrulev2 = center,class:(wm-floating-big)
+windowrule = float on, match:class wm-floating-big
+windowrule = size 1680 920, match:class wm-floating-big
+windowrule = center on, match:class wm-floating-big
 
 # Applications to workspaces with window rules
-windowrulev2 = workspace 2 silent,class:(.*qutebrowser.*)
-windowrulev2 = workspace 2 silent,class:(.*firefox.*)
-windowrulev2 = workspace 2 silent,class:(.*Thorium-browser.*)
-windowrulev2 = workspace 3 silent,class:(.*Thunderbird.*)
-windowrulev2 = workspace 3 silent,class:(.*thunderbird.*)
-windowrulev2 = workspace 3 silent,class:(.*Mail.*)
-windowrulev2 = workspace 4 silent,class:(.*jetbrains-idea.*)
-windowrulev2 = workspace 5 silent,class:(.*steam.*)
-windowrulev2 = workspace 5 silent,class:(.*steamwebhelper.*)
-windowrulev2 = workspace 5 silent,class:(.*Terraria.*)
-windowrulev2 = workspace 6 silent,class:(.*FreeTube.*)
-windowrulev2 = workspace 7 silent,class:(.*resolve.*)
-windowrulev2 = workspace 7 silent,class:(.*anythingllm-desktop.*)
-windowrulev2 = workspace 8 silent,class:(.*Godot.*)
-windowrulev2 = workspace 9 silent,class:(.*zoom.*)
-windowrulev2 = workspace 9 silent,class:(.*telegram-desktop.*)
-windowrulev2 = workspace 9 silent,class:(.*discord.*)
-windowrulev2 = workspace 9 silent,class:(.*Signal.*)
+windowrule = workspace 2 silent, match:class org.qutebrowser.qutebrowser
+windowrule = workspace 2 silent, match:class firefox 
+windowrule = workspace 2 silent, match:class Thorium-browser
+windowrule = workspace 3 silent, match:class org.mozilla.Thunderbird
+windowrule = workspace 4 silent, match:class jetbrains-idea
+windowrule = workspace 5 silent, match:class steam
+windowrule = workspace 5 silent, match:class steamwebhelper
+windowrule = workspace 6 silent, match:class FreeTube
+windowrule = workspace 7 silent, match:class anythingllm-desktop
+windowrule = workspace 8 silent, match:class Godot
+windowrule = workspace 9 silent, match:class zoom
+windowrule = workspace 9 silent, match:class Signal
 
 # Positions, floats
-windowrulev2 = float,class:(nemo)
-windowrulev2 = float,class:(Gaia Sky),title:(Gaia Sky)
-windowrulev2 = float,class:(blueman-manager)
-windowrulev2 = center,class:(blueman-manager)
-windowrulev2 = float,class:(nm-connection-editor)
-windowrulev2 = center,class:(nm-connection-editor)
-windowrulev2 = float,class:(mpv)
-windowrulev2 = center,class:(mpv)
-windowrulev2 = float,class:(.*speedcrunch)
-windowrulev2 = center,class:(.*speedcrunch)
-windowrulev2 = float,class:(thunderbird),title:(.*Reminder[s]?)
-windowrulev2 = float,class:(thunderbird),title:(Feed Subscriptions)
-windowrulev2 = float,class:(thunderbird),title:(About Mozilla Thunderbird)
-windowrulev2 = float,class:(thunderbird),title:(Write: .*)
-windowrulev2 = float,class:(.*Terraria.*)
-windowrulev2 = float,class:(.*zenity.*)
-windowrulev2 = float,title:(Export Image as.*)
+windowrule = float on, match:class nemo
+windowrule = float on, match:class Gaia Sky
+windowrule = float on, match:class blueman-manager
+windowrule = center on, match:class blueman-manager
+windowrule = float on, match:class nm-connection-editor
+windowrule = center on, match:class nm-connection-editor
+windowrule = float on, match:class mpv
+windowrule = center on, match:class mpv
+windowrule = float on, match:class speedcrunch
+windowrule = center on, match:class speedcrunch
+windowrule = float on, match:class org.mozilla.Thunderbird
+windowrule = float on, match:class org.mozilla.Thunderbird, match:title Feed Subscriptions
+windowrule = float on, match:class org.mozilla.Thunderbird, match:title About Mozilla Thunderbird
+windowrule = float on, match:class org.mozilla.Thunderbird, match:title Write: .*
+windowrule = float on, match:class Terraria
+windowrule = float on, match:title Export Image as
 
-# Picture-in-picture windows
-windowrulev2 = float,title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
-windowrulev2 = pin,title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
-windowrulev2 = move 67% 72%, title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
-windowrulev2 = size 33% 28%, title:^(Picture in picture|Picture-in-picture|Picture-in-Picture)$
 
 # Special
-windowrulev2 = noinitialfocus, class:(jetbrains-)(.*), floating:1
+windowrule = no_initial_focus on, match:class jetbrains-.*
